fixed responsiveness of headers aligning center

--- a/src/App.css
+++ b/src/App.css
@@ -44,10 +44,10 @@ body {
 .cardHeader {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .clearBtn {
-    align-self: flex-end;
     width: 150px;
     padding: 1rem 2rem;
     text-align: center;
@@ -63,4 +63,16 @@ body {
 
 label input {
     background-color: var(--background);
+}
+
+@media (max-width: 600px) {
+    .cardHeader {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 15px;
+    }
+
+    h2 {
+        text-align: center;
+    }
 }
