--- a/src/components/Expenses.css
+++ b/src/components/Expenses.css
@@ -15,6 +15,7 @@
     text-align: center;
     width: 100px;
     height: 60px;
+    transition: 0.15s;
 }
 
 
